[gd_scene load_steps=57 format=2]

[ext_resource path="res://Art/Players/Hooddo/0/07.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Art/Players/Hooddo/0/02.png" type="Texture" id=3]
[ext_resource path="res://Art/Players/Hooddo/0/01.png" type="Texture" id=4]
[ext_resource path="res://Art/Players/Hooddo/0/08.png" type="Texture" id=5]
[ext_resource path="res://Art/Players/Hooddo/0/05.png" type="Texture" id=6]
[ext_resource path="res://Art/Players/Hooddo/0/09.png" type="Texture" id=7]
[ext_resource path="res://Art/Players/Hooddo/0/03.png" type="Texture" id=8]
[ext_resource path="res://Art/Players/Hooddo/0/00.png" type="Texture" id=9]
[ext_resource path="res://Art/Players/Hooddo/0/06.png" type="Texture" id=10]
[ext_resource path="res://Art/Players/Hooddo/0/04.png" type="Texture" id=11]
[ext_resource path="res://Weapons/Pistol/Pistol.tscn" type="PackedScene" id=12]
[ext_resource path="res://Animations/Player/Walk.tres" type="Animation" id=13]
[ext_resource path="res://Art/Players/Hooddo/0/12.png" type="Texture" id=14]
[ext_resource path="res://Art/Players/Hooddo/0/19.png" type="Texture" id=15]
[ext_resource path="res://Art/Players/Hooddo/0/18.png" type="Texture" id=16]
[ext_resource path="res://Art/Players/Hooddo/1/18.png" type="Texture" id=17]
[ext_resource path="res://Art/Players/Hooddo/1/00.png" type="Texture" id=18]
[ext_resource path="res://Art/Players/Hooddo/1/05.png" type="Texture" id=19]
[ext_resource path="res://Art/Players/Hooddo/1/17.png" type="Texture" id=20]
[ext_resource path="res://Art/Players/Hooddo/1/04.png" type="Texture" id=21]
[ext_resource path="res://Art/Players/Hooddo/1/02.png" type="Texture" id=22]
[ext_resource path="res://Art/Players/Hooddo/1/03.png" type="Texture" id=23]
[ext_resource path="res://Art/Players/Hooddo/1/15.png" type="Texture" id=24]
[ext_resource path="res://Art/Players/Hooddo/1/10.png" type="Texture" id=25]
[ext_resource path="res://Art/Players/Hooddo/1/07.png" type="Texture" id=26]
[ext_resource path="res://Art/Players/Hooddo/1/08.png" type="Texture" id=27]
[ext_resource path="res://Art/Players/Hooddo/1/16.png" type="Texture" id=28]
[ext_resource path="res://Art/Players/Hooddo/1/06.png" type="Texture" id=29]
[ext_resource path="res://Art/Players/Hooddo/1/12.png" type="Texture" id=30]
[ext_resource path="res://Art/Players/Hooddo/1/01.png" type="Texture" id=31]
[ext_resource path="res://Art/Players/Hooddo/1/19.png" type="Texture" id=32]
[ext_resource path="res://Art/Players/Hooddo/1/11.png" type="Texture" id=33]
[ext_resource path="res://Art/Players/Hooddo/1/09.png" type="Texture" id=34]
[ext_resource path="res://Art/Players/Hooddo/1/13.png" type="Texture" id=35]
[ext_resource path="res://Art/Players/Hooddo/1/14.png" type="Texture" id=36]
[ext_resource path="res://Art/Players/Hooddo/0/010.png" type="Texture" id=37]
[ext_resource path="res://Art/Players/Hooddo/1/010.png" type="Texture" id=38]
[ext_resource path="res://Art/Players/Hooddo/1/110.png" type="Texture" id=39]
[ext_resource path="res://Art/Pistol/0.png" type="Texture" id=40]

[sub_resource type="CapsuleShape2D" id=16]
radius = 3.5
height = 21.5

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Part1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Part1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Part5:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Part5:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Part0:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -3.17668, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Part0:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 22.3667, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Part0:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Part4:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 6.52104, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Part4:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 22.4802, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Part4:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Part6:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Part6:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Part9:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.793701, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Part9:position:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2.77795, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}

[sub_resource type="Animation" id=2]
resource_name = "Shoot"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("WeaponController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.99425, -0.25, 0, 0.25, 0, -6.0329, -0.25, 0, 0.25, 0, 1.99425, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("WeaponController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 19.5444, -0.25, 0, 0.25, 0, 18.0579, -0.25, 0, 0.25, 0, 19.5444, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("WeaponController:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -22.1073, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "WalkSide"
length = 1.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Part0:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -3.17668, -0.25, 0, 0.25, 0, -3.17668, -0.25, 0, 0.25, 0, -3.17668, -0.25, 0, 0.25, 0, -3.17668, -0.25, 0, 0.25, 0, -3.17668, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Part0:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22.3667, -0.25, 0, 0.25, 0, 26.5289, -0.25, 0, 0.25, 0, 22.3667, -0.25, 0, 0.25, 0, 19.3937, -0.25, 0, 0.25, 0, 22.3667, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Part5:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Part5:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -3.12167, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 7.2839, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Part4:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 6.52104, -0.25, 0, 0.25, 0, 6.52104, -0.25, 0, 0.25, 0, 6.52104, -0.25, 0, 0.25, 0, 6.52104, -0.25, 0, 0.25, 0, 6.52104, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Part4:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 22.4802, -0.25, 0, 0.25, 0, 19.3585, -0.25, 0, 0.25, 0, 22.4802, -0.25, 0, 0.25, 0, 26.9397, -0.25, 0, 0.25, 0, 22.4802, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Part1:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Part1:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 7.43255, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -2.97302, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.230503, 0.524402, 0.866447, 1.2 )
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 25 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 33 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 35 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 36 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 24 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 28 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 20 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 15 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 32 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 14 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 30 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 16 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 17 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 17.288
height = 28.489

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, 0 )
scale = Vector2( 0.84, 0.84 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 35.0444 )
rotation = 1.5708
scale = Vector2( 1, 1 )
z_index = -1
shape = SubResource( 16 )

[node name="VisualController" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="VisualController"]
autoplay = "Idle"
playback_default_blend_time = 0.5
anims/Idle = SubResource( 1 )
anims/Shoot = SubResource( 2 )
anims/Walk = ExtResource( 13 )
anims/WalkSide = SubResource( 3 )
blend_times = [ "Shoot", "Idle", 1.0, "Shoot", "Shoot", 1.0, "Shoot", "Walk", 1.0 ]

[node name="Part0" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( -3.17668, 22.3667 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 4 )
animation = "0"
playing = true
offset = Vector2( 0.992958, -6.99132 )

[node name="Part1" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 5 )
animation = "0"
playing = true

[node name="Part3" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( 9.57725, 6.14805 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 6 )
animation = "0"
playing = true
offset = Vector2( -2.99363, -1.92174 )

[node name="Part4" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( 6.52104, 22.4802 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 7 )
animation = "0"
playing = true
offset = Vector2( -2.03833, -7.0268 )

[node name="Part5" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 8 )
animation = "0"
playing = true

[node name="Part6" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 9 )
animation = "0"
playing = true

[node name="Part7" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( -8.00465, 8.87693 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 10 )
animation = "0"
playing = true
offset = Vector2( 2.99859, -3.03696 )

[node name="Part9" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 11 )
animation = "0"
frame = 1
playing = true

[node name="Part2" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( 12.3672, 21.0859 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 12 )
animation = "0"
frame = 1
playing = true
offset = Vector2( -5.00072, -6.00109 )

[node name="WeaponController" type="Node2D" parent="VisualController"]
position = Vector2( 1.99425, 19.5444 )
scale = Vector2( 0.108049, 0.108049 )

[node name="Pistol" parent="VisualController/WeaponController" instance=ExtResource( 12 )]
position = Vector2( 17.7313, -37.5515 )
scale = Vector2( 1, 1 )
texture = ExtResource( 40 )
offset = Vector2( 96.7691, -18.3019 )

[node name="Part8" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( -0.895592, 20.1639 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 13 )
animation = "0"
frame = 1
playing = true
offset = Vector2( 3.01201, -6.00179 )

[node name="Part10" type="AnimatedSprite" parent="VisualController" groups=[
"sprites",
]]
position = Vector2( -3.17668, 22.3667 )
scale = Vector2( 3.19921, 3.19921 )
frames = SubResource( 14 )
animation = "0"
playing = true
offset = Vector2( 0.992958, -6.99132 )

[node name="ElementActiveTimer" type="Timer" parent="."]
one_shot = true

[node name="BurnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="TwirlTimer" type="Timer" parent="."]

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="Collider" type="Area2D" parent="." groups=[
"Player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
position = Vector2( 0, 9 )
scale = Vector2( 1, 1 )
z_index = -1
shape = SubResource( 15 )
[connection signal="timeout" from="ElementActiveTimer" to="." method="_on_ElementActiveTimer_timeout"]
[connection signal="timeout" from="BurnTimer" to="." method="_on_BurnTimer_timeout"]
[connection signal="timeout" from="TwirlTimer" to="." method="_on_TwirlTimer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="body_entered" from="Collider" to="." method="hit"]
